--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=gamestoreapidatabase.cnn7n8qfjggv.eu-west-2.rds.amazonaws.com;Port=3306;Database=GameStoreDBOffice;User Id=admin;Password=DatabasePassword!1"
+    "DefaultConnection": "Server=gamestoreapidatabase.cnn7n8qfjggv.eu-west-2.rds.amazonaws.com;Port=3306;Database=GameStoreDBOffice;User Id=admin;Password=DatabasePassword!1",
+    "DynamoDbConnection": "" 
   },
   "JWT": {
     "Issuer": "OnlineStoreIssuer",
