reconfig db, configure images

--- a/WebApi/appsettings.Local.json
+++ b/WebApi/appsettings.Local.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.99.100;Port=3306;Database=GamestoreDb;User Id=root;Password=admin"
+    "DefaultConnection": "Server=databasedb.c0bbkg8uto5u.us-east-2.rds.amazonaws.com;Port=3306;Database=GamestoreDb;User Id=root;Password=DatabasePassword!1"
   },
   "JWT": {
     "Issuer": "OnlineStoreIssuer",
