--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.3.110.68" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\OnlineStoreApi\OnlineStoreApi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
