--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=gamestore-db-snapshot-1.c0bbkg8uto5u.us-east-2.rds.amazonaws.com;Port=3306;Database=GamestoreDb;User Id=admin;Password=DatabasePassword!1"
+    "DefaultConnection": "Server=databasedb.c0bbkg8uto5u.us-east-2.rds.amazonaws.com;Port=3306;Database=GamestoreDb;User Id=root;Password=DatabasePassword!1"
   },
   "JWT": {
     "Issuer": "OnlineStoreIssuer",
     "Key": "mysupersecret_secretkey!123!",
     "Audience": "http://localhost:51851"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ImagesDownloadUrl": "https://computer-store-images.s3.us-east-2.amazonaws.com/"
 }
